# multithreading-logger

./: CMakeLists.txt  ILogger.cpp  ILogger.h  LogUtil.h  LoggerPool.cpp  LoggerPool.hpp  README.md  SPDLogger.cpp  SPDLogger.h  string_utils.h
spdlog/: CMakeLists.txt
spdlog/include/spdlog/sinks/: daily_file_sink.h
test_logger/: CMakeLists.txt  main.cpp  thread2_write_cam.cpp  thread2_write_cam.hpp
